--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -106,6 +106,10 @@ p {
     margin: 0;
 }
 
+.ocultar{
+    display: none;
+}
+
 /** MOBILE **/
 
 /* MENU */
@@ -116,7 +120,7 @@ p {
 
 .menu-mobile {}
 
-.menu-mobile .header {
+.container-icon {
     display: flex;
     width: 100%;
     flex-direction: row;
@@ -125,12 +129,12 @@ p {
     align-content: center;
 }
 
-.menu-mobile .header .logo {
+.container-icon .logo {
     flex-grow: 2;
     text-align: left;
 }
 
-.menu-mobile .header .logo img {
+ .container-icon .logo img {
     width: 5rem;
     margin-left: 1rem;
     color: var(--titulo);
@@ -148,11 +152,11 @@ p {
     }
 }
 
-.menu-mobile a svg {
+.container-icon a svg {
     fill: var(--subtitulos);
 }
 
-.menu-mobile a:hover svg {
+.container-icon a:hover svg {
     transition: all ease .7s;
     fill: var(--titulo);
 }
@@ -264,18 +268,15 @@ p {
     }
 }
 
-.menu-mobile ul {
+.nav ul {
     display: flex;
     flex-direction: column;
     margin: 0;
     padding: 0;
-}
-
-.menu-mobile ul li {
     text-align: center;
 }
 
-.menu-mobile ul li a {
+.nav ul li a {
     display: block;
     padding: 1.5rem 0;
 }
