--- a/src/views/index.html
+++ b/src/views/index.html
@@ -179,76 +179,76 @@
 
           <div class="bg-hover">
             <div class="info">
-              <a class="btn" href="">Ver Proyecto</a>
-              <a class="customer" href="">Ver código</a>
+              <a class="btn info__btn" href="">Ver Proyecto</a>
+              <a class="btn info__btn" href="">Ver código</a>
             </div>
           </div>
         </div>
         <!-- ITEM -->
-        <a href="#" class="grid__item">
+        <div class="grid__item">
           <img
             src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
             alt=""
           />
           <div class="bg-hover">
             <div class="info">
-              <div class="title">NO SE QUE PONER</div>
-              <div class="customer">NO SE QUE PONER X1</div>
+              <a class="btn info__btn" href="">Ver Proyecto</a>
+              <a class="btn info__btn" href="">Ver código</a>
             </div>
           </div>
-        </a>
+        </div>
         <!-- ITEM -->
-        <a href="#" class="grid__item">
+        <div class="grid__item">
           <img
             src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
             alt=""
           />
           <div class="bg-hover">
             <div class="info">
-              <div class="title">NO SE QUE PONER</div>
-              <div class="customer">NO SE QUE PONER X1</div>
+              <a class="btn info__btn" href="">Ver Proyecto</a>
+              <a class="btn info__btn" href="">Ver código</a>
             </div>
           </div>
-        </a>
+        </div>
         <!-- ITEM -->
-        <a href="#" class="grid__item">
+        <div class="grid__item">
           <img
             src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
             alt=""
           />
           <div class="bg-hover">
             <div class="info">
-              <div class="title">NO SE QUE PONER</div>
-              <div class="customer">NO SE QUE PONER X1</div>
+              <a class="btn info__btn" href="">Ver Proyecto</a>
+              <a class="btn info__btn" href="">Ver código</a>
             </div>
           </div>
-        </a>
+        </div>
         <!-- ITEM -->
-        <a href="#" class="grid__item">
+        <div class="grid__item">
           <img
             src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
             alt=""
           />
           <div class="bg-hover">
             <div class="info">
-              <div class="title">NO SE QUE PONER</div>
-              <div class="customer">NO SE QUE PONER X1</div>
+              <a class="btn info__btn" href="">Ver Proyecto</a>
+              <a class="btn info__btn" href="">Ver código</a>
             </div>
           </div>
-        </a>
+        </div>
         <!-- ITEM -->
-        <a href="#" class="grid__item">
+        <div class="grid__item">
           <img
             src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
             alt=""
           />
           <div class="bg-hover">
             <div class="info">
-              <div class="title">NO SE QUE PONER</div>
-              <div class="customer">NO SE QUE PONER X1</div>
+              <a class="btn info__btn" href="">Ver Proyecto</a>
+              <a class="btn info__btn" href="">Ver código</a>
             </div>
           </div>
-        </a>
+        </div>
       </div>
     </section>
     <!-- SKILLS -->
