--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -1,5 +1,7 @@
 @use "config/fonts" as f;
 @use "config/colors" as c;
+@use 'mixins/breakpoints' as m;
+
 
 html {
   font-size: 62.5%;
@@ -87,6 +89,28 @@ img {
 
 .ocultar {
   display: none;
+}
+
+.btn {
+  margin: 1rem auto;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  width: 50%;
+  border: 4px solid c.$rosa;
+  border-radius: 2.5rem;
+  &:active {
+    background-color: c.$rosa;
+  }
+  @include m.hover {
+    &:hover {
+      background-color: c.$rosa;
+    }
+  }
+  @include m.escritorio {
+    width: 30rem;
+    margin-bottom: 2rem;
+  }
 }
 
 //ANIMACIONES
