Agregué los proyectos

--- a/src/scss/layout/_work.scss
+++ b/src/scss/layout/_work.scss
@@ -73,7 +73,8 @@
     align-items: center;
     text-align: center;
     .info__btn {
-      margin: 1rem;
+      margin: 0.5rem;
+      font-size: 1.8rem;
     }
   }
   &:hover,
