--- a/src/views/index.html
+++ b/src/views/index.html
@@ -179,73 +179,149 @@
 
           <div class="bg-hover">
             <div class="info">
-              <a class="btn info__btn" href="">Ver Proyecto</a>
-              <a class="btn info__btn" href="">Ver código</a>
+              <a href="https://coffeeblog9.netlify.app/" class="btn info__btn"
+                >Ver Proyecto</a
+              >
+              <a
+                href="https://github.com/ElielM9/coffee-blog"
+                class="btn info__btn"
+                >Ver código</a
+              >
             </div>
           </div>
         </div>
         <!-- ITEM -->
         <div class="grid__item">
-          <img
-            src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
-            alt=""
-          />
+          <picture>
+            <source srcset=".avif" type="avif" />
+            <source srcset=".webp" type="webp" />
+            <img
+              loading="lazy"
+              width="200"
+              height="300"
+              src="assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
+              alt=""
+            />
+          </picture>
+
           <div class="bg-hover">
             <div class="info">
-              <a class="btn info__btn" href="">Ver Proyecto</a>
-              <a class="btn info__btn" href="">Ver código</a>
+              <a href="https://lavitadolce.netlify.app/" class="btn info__btn"
+                >Ver Proyecto</a
+              >
+              <a
+                href="https://github.com/ElielM9/page-italian-restaurant"
+                class="btn info__btn"
+                >Ver código</a
+              >
             </div>
           </div>
         </div>
         <!-- ITEM -->
         <div class="grid__item">
-          <img
-            src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
-            alt=""
-          />
+          <picture>
+            <source srcset=".avif" type="avif" />
+            <source srcset=".webp" type="webp" />
+            <img
+              loading="lazy"
+              width="200"
+              height="300"
+              src="assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
+              alt=""
+            />
+          </picture>
+
           <div class="bg-hover">
             <div class="info">
-              <a class="btn info__btn" href="">Ver Proyecto</a>
-              <a class="btn info__btn" href="">Ver código</a>
+              <a
+                href="https://tech-busineess.netlify.app/"
+                class="btn info__btn"
+                >Ver Proyecto</a
+              >
+              <a
+                href="https://github.com/ElielM9/pagina-empresa-tecnologia"
+                class="btn info__btn"
+                >Ver código</a
+              >
             </div>
           </div>
         </div>
         <!-- ITEM -->
         <div class="grid__item">
-          <img
-            src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
-            alt=""
-          />
+          <picture>
+            <source srcset=".avif" type="avif" />
+            <source srcset=".webp" type="webp" />
+            <img
+              loading="lazy"
+              width="200"
+              height="300"
+              src="assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
+              alt=""
+            />
+          </picture>
+
           <div class="bg-hover">
             <div class="info">
-              <a class="btn info__btn" href="">Ver Proyecto</a>
-              <a class="btn info__btn" href="">Ver código</a>
+              <a
+                href="https://todo-list-app-09.netlify.app/"
+                class="btn info__btn"
+                >Ver Proyecto</a
+              >
+              <a
+                href="https://github.com/ElielM9/todo-list-app"
+                class="btn info__btn"
+                >Ver código</a
+              >
             </div>
           </div>
         </div>
         <!-- ITEM -->
         <div class="grid__item">
-          <img
-            src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
-            alt=""
-          />
+          <picture>
+            <source srcset=".avif" type="avif" />
+            <source srcset=".webp" type="webp" />
+            <img
+              loading="lazy"
+              width="200"
+              height="300"
+              src="assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
+              alt=""
+            />
+          </picture>
+
           <div class="bg-hover">
             <div class="info">
-              <a class="btn info__btn" href="">Ver Proyecto</a>
-              <a class="btn info__btn" href="">Ver código</a>
+              <a
+                href="https://rockedm-festival-em.netlify.app/"
+                class="btn info__btn"
+                >Ver Proyecto</a
+              >
+              <a
+                href="https://github.com/ElielM9/festival-musica"
+                class="btn info__btn"
+                >Ver código</a
+              >
             </div>
           </div>
         </div>
         <!-- ITEM -->
         <div class="grid__item">
-          <img
-            src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
-            alt=""
-          />
+          <picture>
+            <source srcset=".avif" type="avif" />
+            <source srcset=".webp" type="webp" />
+            <img
+              loading="lazy"
+              width="200"
+              height="300"
+              src="assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg"
+              alt=""
+            />
+          </picture>
+
           <div class="bg-hover">
             <div class="info">
-              <a class="btn info__btn" href="">Ver Proyecto</a>
-              <a class="btn info__btn" href="">Ver código</a>
+              <a href="" class="btn info__btn">Ver Proyecto</a>
+              <a href="" class="btn info__btn">Ver código</a>
             </div>
           </div>
         </div>
