--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -19,7 +19,7 @@ body {
   font-size: 1.6rem;
   font-family: f.$textos;
   background-color: c.$morado;
-  &::selection {
+  ::selection {
     background-color: c.$lila;
   }
 }
