--- a/src/views/index.html
+++ b/src/views/index.html
@@ -157,7 +157,7 @@
           aspernatur.
         </p>
       </div>
-      <a href="" class="btn">Descargar CV</a>
+      <a href="" download="Eliel Medina CV" class="btn">Descargar CV</a>
     </section>
     <!-- WORK -->
     <section id="work" class="work">
@@ -179,11 +179,15 @@
 
           <div class="bg-hover">
             <div class="info">
-              <a href="https://coffeeblog9.netlify.app/" class="btn info__btn"
+              <a
+                href="https://coffeeblog9.netlify.app/"
+                target="_blank"
+                class="btn info__btn"
                 >Ver Proyecto</a
               >
               <a
                 href="https://github.com/ElielM9/coffee-blog"
+                target="_blank"
                 class="btn info__btn"
                 >Ver código</a
               >
@@ -206,11 +210,15 @@
 
           <div class="bg-hover">
             <div class="info">
-              <a href="https://lavitadolce.netlify.app/" class="btn info__btn"
+              <a
+                href="https://lavitadolce.netlify.app/"
+                target="_blank"
+                class="btn info__btn"
                 >Ver Proyecto</a
               >
               <a
                 href="https://github.com/ElielM9/page-italian-restaurant"
+                target="_blank"
                 class="btn info__btn"
                 >Ver código</a
               >
@@ -235,11 +243,13 @@
             <div class="info">
               <a
                 href="https://tech-busineess.netlify.app/"
+                target="_blank"
                 class="btn info__btn"
                 >Ver Proyecto</a
               >
               <a
                 href="https://github.com/ElielM9/pagina-empresa-tecnologia"
+                target="_blank"
                 class="btn info__btn"
                 >Ver código</a
               >
@@ -264,11 +274,13 @@
             <div class="info">
               <a
                 href="https://todo-list-app-09.netlify.app/"
+                target="_blank"
                 class="btn info__btn"
                 >Ver Proyecto</a
               >
               <a
                 href="https://github.com/ElielM9/todo-list-app"
+                target="_blank"
                 class="btn info__btn"
                 >Ver código</a
               >
@@ -293,11 +305,13 @@
             <div class="info">
               <a
                 href="https://rockedm-festival-em.netlify.app/"
+                target="_blank"
                 class="btn info__btn"
                 >Ver Proyecto</a
               >
               <a
                 href="https://github.com/ElielM9/festival-musica"
+                target="_blank"
                 class="btn info__btn"
                 >Ver código</a
               >
@@ -320,8 +334,8 @@
 
           <div class="bg-hover">
             <div class="info">
-              <a href="" class="btn info__btn">Ver Proyecto</a>
-              <a href="" class="btn info__btn">Ver código</a>
+              <a href="" target="_blank" class="btn info__btn">Ver Proyecto</a>
+              <a href="" target="_blank" class="btn info__btn">Ver código</a>
             </div>
           </div>
         </div>
