--- a/src/scss/layout/_main-image.scss
+++ b/src/scss/layout/_main-image.scss
@@ -10,7 +10,7 @@
   margin-top: 10rem;
   margin-bottom: 6rem;
   height: 20rem;
-  max-width: 100%;
+  width: 100%;
   transform-origin: 0 0;
   transform: skewY(-10deg);
   overflow: hidden;
