--- a/src/views/index.html
+++ b/src/views/index.html
@@ -99,17 +99,10 @@
   <body>
     <!-- MENU -->
     <nav class="menu">
-      <ul class="menu__left">
-        <li><a href="#">Home</a></li>
-        <li><a href="#work">Work</a></li>
-      </ul>
-      <a href="index.html" class="logo">
-        <img src="assets/icons/racoon.svg" alt="" />
-      </a>
-      <ul class="menu__right">
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+      <a href="#inicio">Inicio</a>
+      <a href="#work">Trabajo</a>
+      <a href="#skills">Habilidades</a>
+      <a href="#contact">Contacto</a>
     </nav>
     <!-- MENU-MOBILE -->
     <header class="menu-mobile">
@@ -119,10 +112,10 @@
         </a>
       </div>
       <nav id="nav" class="nav ocultar entrance">
-        <a href="index.html">HOME</a>
-        <a href="#work">WORK</a>
-        <a href="#skills">Skills</a>
-        <a href="#contact">CONTACT</a>
+        <a href="#inicio">Inicio</a>
+        <a href="#work">Proyectos</a>
+        <a href="#skills">Habilidades</a>
+        <a href="#contact">Contacto</a>
       </nav>
       <div class="hamburguer">
         <a href="#" id="buttonOpenCloseMenu">
@@ -139,7 +132,7 @@
       </div>
     </header>
     <!-- MAIN-IMAGE -->
-    <div class="main-img">
+    <div class="main-img" id="inicio">
       <div class="main-img__bg">
         <div class="main-img__text">
           <h1 class="nomargin">Eliel Medina</h1>
@@ -148,8 +141,8 @@
       </div>
     </div>
     <!-- INTRO -->
-    <section class="container intro">
-      <h2>ABOUT ME</h2>
+    <section class="intro container">
+      <h2>Sobre mí</h2>
       <div class="intro__text">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aut
@@ -161,7 +154,7 @@
     </section>
     <!-- WORK -->
     <section id="work" class="work">
-      <h2 class="work__title">Work</h2>
+      <h2 class="work__title">Proyectos</h2>
       <div class="grid work__items">
         <!-- ITEM -->
         <div class="grid__item">
@@ -343,7 +336,7 @@
     </section>
     <!-- SKILLS -->
     <section class="skills container" id="skills">
-      <h2>SKILLS</h2>
+      <h2>Habilidades</h2>
       <h3>Front-end</h3>
       <div class="skills__content">
         <div class="skills__skill">
@@ -375,14 +368,14 @@
     <!-- CONTACTO -->
     <section class="contact" id="contact">
       <div class="contact__container">
-        <h2>CONTACT</h2>
+        <h2>Contacto</h2>
         <div class="contact__columns">
           <div class="contact__location">
-            <h3>CONTACT</h3>
+            <h3>Contáctame</h3>
             <a href="mailto:elielm291@gmail.com?">ELIELM291@GMAIL.COM</a><br />
             <a href="tel:+528338507324">+52-833-850-7324</a>
-            <h3>LOCATION</h3>
-            <p>TAMPICO, TAMPS, MEXICO</p>
+            <h3>Ubicación</h3>
+            <p>Tampico, Tamps, México</p>
           </div>
           <div class="contact__social">
             <a href="https://www.linkedin.com/in/eliel-m/">
@@ -408,14 +401,16 @@
             </a>
           </div>
           <div class="contact__rights">
-            <h3>FOR RIGHTS</h3>
+            <h3>Derechos</h3>
             <p>
-              ALL RIGHTS RESERVED: <br />
-              ELIEL M. <span class="date"></span> &copy;<br />
-              ICONS MADE BY
-              <a href="https://www.freepik.com" title="Freepik">Freepik</a
+              Todos los derechos reservados: <br />
+              Eliel M. <span class="date"></span> &copy;<br />
+              Iconos hechos por:<a
+                href="https://www.freepik.com"
+                title="Freepik"
+                >Freepik</a
               ><br />
-              FROM<a href="https://www.flaticon.com/" title="Flaticon"
+              De<a href="https://www.flaticon.com/" title="Flaticon"
                 >WWW.FLATICON.COM</a
               >
             </p>
