--- a/src/scss/layout/_intro.scss
+++ b/src/scss/layout/_intro.scss
@@ -6,15 +6,16 @@
   font-size: 2rem;
   margin: 4rem auto;
   margin-top: -5rem;
-  
+  width: 100%;
   h2 {
     margin-bottom: 0;
   }
   &__text {
-    text-align: left;
+    text-align: center;
+    @include m.tablet {
+    }
     p {
       margin-top: 1rem;
     }
   }
- 
 }
