--- a/src/scss/layout/_menu.scss
+++ b/src/scss/layout/_menu.scss
@@ -8,36 +8,24 @@
   @include m.escritorio {
     text-align: center;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 10rem auto 0 auto;
     width: 50%;
     align-items: center;
   }
-  ul {
-    @include m.escritorio {
-      width: 33%;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      gap: 3rem;
-    }
-    li {
+    a {
       @include m.escritorio {
+        font-family: f.$textos;
+        font-size: 2.7rem;
         animation-name: opening-logo;
         animation-duration: 1.6s;
         animation-timing-function: ease-in-out;
-        a {
-          font-family: f.$textos;
-          font-size: 2.7rem;
-        }
       }
-    }
   }
   .logo {
     img {
       text-align: center;
-      width: 7rem;
+      width: 8rem;
       animation-name: opening-logo;
       animation-duration: 1.6s;
       animation-timing-function: ease-in-out;
