Agregué mi CV al portafolio

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -150,7 +150,7 @@
           aspernatur.
         </p>
       </div>
-      <a href="" download="Eliel Medina CV" class="btn">Descargar CV</a>
+      <a href="./assets/pdf/ElielMedina-CV.pdf"download="Eliel Medina CV" class="btn">Descargar CV</a>
     </section>
     <!-- WORK -->
     <section id="work" class="work">
