Cambié las fuentes

--- a/src/scss/config/_fonts.scss
+++ b/src/scss/config/_fonts.scss
@@ -1,2 +1,3 @@
-$titulos: 'Barlow Condensed', sans-serif;
-$textos: 'Work Sans', sans-serif;
+$titulo: "Bebas Neue", cursive;
+$subtitulos: "Montserrat", sans-serif;
+$textos: "Amiko", sans-serif;
