--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,18 +10,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Work+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&family=Bebas+Neue&family=Montserrat:wght@800&display=swap" rel="stylesheet"> 
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -336,7 +327,7 @@
     </section>
     <!-- SKILLS -->
     <section class="skills container" id="skills">
-      <h2>Habilidades</h2>
+      <h2>Tecnologías</h2>
       <h3>Front-end</h3>
       <div class="skills__content">
         <div class="skills__skill">
