Links: Todos los proyectos han sido actualizados

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -226,7 +226,7 @@
           <div class="bg-hover">
             <div class="info">
               <a
-                href="https://tech-busineess.netlify.app/"
+                href="https://expertdev.netlify.app/"
                 target="_blank"
                 class="btn info__btn"
                 >Ver Proyecto</a
